# course-validator

./: README.md  pyproject.toml
backend/: .env.example  README.md
backend/app/: main.py
backend/app/db/: mongo.py
backend/app/models/: idea.py
backend/app/routes/: idea.py
backend/app/services/: keyword_extraction.py
