[project]
name = "agent-market"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "motor",
    "pydantic",
    "python-jose[cryptography]",
    "passlib[bcrypt]",
    "httpx",
    "pydantic-settings>=2.9.1",
    "email-validator>=2.2.0",
    "python-multipart>=0.0.20",
    "openai>=1.90.0",
    "tenacity>=9.1.2",
    "numpy>=2.3.1",
    "pytest>=8.4.1",
    "asgi-lifespan>=2.1.0",
    "pytest-asyncio>=1.0.0",
]
