[project]
name = "course-validator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "motor",
    "pydantic",
    "openai>=1.90.0",
    "python-dotenv",
    "pytrends",  # For Google Trends analysis
    "beautifulsoup4",  # For web scraping
    "httpx",  # For async HTTP requests
    "pytest",  # For testing
    "pytest-asyncio",  # For async tests
    "black",  # For code formatting
    "mypy",  # For type checking
    "ruff",  # For linting
]
